fixed bug - link type elments overflowing  page containers

--- a/themes/digital_foundation/scss/custom/_content.scss
+++ b/themes/digital_foundation/scss/custom/_content.scss
@@ -408,7 +408,9 @@
 }
 
 
-
+.layout--onecol {
+	overflow: hidden;
+}
 
 
 
